--- a/app/client/index.html
+++ b/app/client/index.html
@@ -28,11 +28,34 @@
       rel="stylesheet"
     />
 
-    <!-- iOS Web Clip -->
-    <link rel="apple-touch-icon" href="assets/images/favicon.png" />
+    <!-- Favicons -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
-
-    <link rel="icon" href="assets/images/favicon.png" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/assets/favicons/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/assets/favicons/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/assets/favicons/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/assets/images/site.webmanifest" />
+    <link
+      rel="mask-icon"
+      href="/assets/favicons/safari-pinned-tab.svg"
+      color="#5bbad5"
+    />
+    <link rel="shortcut icon" href="/assets/favicons/favicon.ico" />
+    <!-- Theme color -->
+    <meta name="theme-color" content="#1b365d" />
 
     <script>
       (function(i, s, o, g, r, a, m) {
