fixed styling + dates

--- a/app/client/index.html
+++ b/app/client/index.html
@@ -23,8 +23,8 @@
     <!-- Custom styling -->
     <link rel="stylesheet" href="./stylesheets/normalize.css" />
     <link rel="stylesheet" href="./build/site.css" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Nunito"
+    <link 
+      href="https://fonts.googleapis.com/css?family=Nunito+Sans&display=swap" 
       rel="stylesheet"
     />
 
