--- a/app/client/index.html
+++ b/app/client/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>HackBeanpot 2019</title>
+    <title>HackBeanpot 2020</title>
 
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
@@ -23,8 +23,8 @@
     <!-- Custom styling -->
     <link rel="stylesheet" href="./stylesheets/normalize.css" />
     <link rel="stylesheet" href="./build/site.css" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Nunito"
+    <link 
+      href="https://fonts.googleapis.com/css?family=Nunito+Sans&display=swap" 
       rel="stylesheet"
     />
 
