--- a/app/client/index.html
+++ b/app/client/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>HackBeanpot 2020</title>
+    <title>HackBeanpot 2020 Application </title>
 
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
